scrollbar attempted fix

--- a/src/components/Matrix/Matrix.css
+++ b/src/components/Matrix/Matrix.css
@@ -22,7 +22,20 @@
 }
 
 #addScrollbar::-webkit-scrollbar {
-  width: 5px;
+    width: 10px;  /* remove scrollbar space */
+    /* background: transparent;  optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in red*/
+#addScrollbar::-webkit-scrollbar-thumb {
+    background: #41463f;
+    border: 1px solid rgb(0,0,0);
+}
+
+
+#addScrollbar::-webkit-scrollbar-track {
+    background: rgb(0,0,0);
+    border: 4px solid transparent;
+    background-clip: content-box;
 }
 
 #padLeft20 {
