--- a/src/components/PhaseThree/PhaseThree.css
+++ b/src/components/PhaseThree/PhaseThree.css
@@ -24,13 +24,27 @@ p {
      background: transparent;  /*optional: just make scrollbar invisible */
 }
 #scroll::-webkit-scrollbar {
-    width: 5px;  /* remove scrollbar space */
+    width: 10px;  /* remove scrollbar space */
     /* background: transparent;  optional: just make scrollbar invisible */
 }
 /* optional: show position indicator in red */
 ::-webkit-scrollbar-thumb {
     background: #41463f;
+    border: 1px solid rgb(0,0,0);
 }
+
+#scroll::-webkit-scrollbar-track {
+    background: rgb(0,0,0);
+    border: 4px solid transparent;
+    background-clip: content-box;
+}
+
+::-webkit-scrollbar-track {
+    background: rgb(0,0,0);
+    border: 5px solid transparent;
+    background-clip: content-box;
+}
+
 #matrixRow {
   max-width: 100%;
   position:relative;
